# pramana

./: .env.example  .gitignore  .pre-commit-config.yaml  AUTH_IMPLEMENTATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REPRODUCIBILITY.md  SECURITY.md  pyproject.toml  submit_results.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: architecture.html  cli.html  contributing.html  index.html  og-card.html  providers.html  quickstart.html  reproducibility.html  style.css  suites.html
src/pramana/: __init__.py  assertions.py  auth.py  cli.py  hash.py  models.py  protocol.py  runner.py  storage.py  submitter.py
src/pramana/providers/: __init__.py  anthropic.py  base.py  claude_code.py  google.py  openai.py  registry.py
src/pramana/suites/v1.0/: cheap.jsonl  comprehensive.jsonl  manifest.toml  moderate.jsonl
suites/: v1.0
suites/v1.0/: cheap.jsonl  comprehensive.jsonl  moderate.jsonl
tests/: README.md  __init__.py  test_assertions.py  test_auth.py  test_cli_integration.py  test_hash.py  test_models.py  test_providers_integration.py  test_runner.py  test_storage.py  test_submitter.py
